@@ -1,3 +1,10 @@
+2006-03-10 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/mcs51/gen.c (sameReg): new, checks if two aop regs are the same,
+	  (genSend): bugfix, do not allocate and free twice,
+	  (shiftRLong): handle partially overlapping aops
+	* support/regression/tests/bitopcse.c: fixed warning redefined idata
+
 2006-03-08 Borut Razem <borut.razem AT siol.net>
 
 	* support/regression/fwk/include/testfwk.h: added defines for xdata, idata
